Adding Javascript up-to-date

--- a/sources/projects.json
+++ b/sources/projects.json
@@ -11,7 +11,7 @@
 	{
 		"titulo":"Javascript up-to-date",
 		"url":"https://github.com/Nemusco/Curso-Javascript-Moderno.git",
-		"imagen":"sources/imgs/projectsImgs/JavascriptModerno.jpg",
+		"imagen":"sources/imgs/projectsImgs/JavascriptModerno.png",
 		"frameworks":"",
 		"lenguajes":"Javascript",
 		"lenguaje":"Javascript",
