Adding projects info

--- a/sources/projects.json
+++ b/sources/projects.json
@@ -16,5 +16,14 @@
 		"lenguajes":"Javascript",
 		"lenguaje":"Javascript",
 		"observacion": "Github repository with fifteen Javascript practice project, each project has been host on Netlify deployment platform"
+	},
+	{
+		"titulo":"Venezuela banks",
+		"url":"https://venezuela-banks.herokuapp.com/",
+		"imagen":"sources/imgs/projectsImgs/VenezuelaBanks.png",
+		"frameworks":"Slim framework, Bootstrap",
+		"lenguajes":"Php,PostgreSQL",
+		"lenguaje":"Php",
+		"observacion":"Public API created with Slim Framework. Gives an updated list of venezuelan banks info(contact number, website, email,etc.). Sometimes, it's difficult to do a mobile payment in Venezuela because of we don't have the bank code for it, on this API you could find all codes of existing banks"
 	}
 ]
